Fota chnages